[package]
name = "rsmqtt"
version = "0.1.1"
edition = "2021"
description = "MQTT Client/Server framework"
repository = "https://github.com/laomar/rsmqtt"
documentation = "https://docs.rs/rsmqtt"
keywords = ["mqtt", "iot"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tokio-rustls = "0.26.0"
async-tungstenite = { version = "0.28.0", features = ["tokio-runtime"] }
ws_stream_tungstenite = { version = "0.14.0", features = ["tokio_io"] }
bytes = "1.9.0"
thiserror = "2.0.3"
num_enum = "0.7.3"